--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.0",
+    "firebase": "^8.7.0",
     "ngrok": "^4.0.1",
     "socket.io": "^4.1.2"
   }
